smurf: Tweak references in SSN/79

--- a/applications/smurf/docs/ssn79/ssn79.tex
+++ b/applications/smurf/docs/ssn79/ssn79.tex
@@ -33,7 +33,7 @@
 \section{\xlabel{introduction}Introduction\label{se:intro}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-The iterative map-maker developed for \SMURF\ is a sophisticated
+The iterative map-maker developed for \SMURF\ \cite{smurf} is a sophisticated
 algorithm that is able to reduce the large amounts of data collected
 by SCUBA-2 in a reasonable amount of time. The algorithm measures and
 removes correlated noise by iteratively solving for sources of noise
@@ -410,23 +410,37 @@ issues that will have to be considered are listed:
 \addcontentsline{toc}{section}{\protect\numberline{}References}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\bibitem{smurf}
+Chapin~E., et~al., \xref{Starlink User Note 258}{sun258}{}, 2013.
+
 \bibitem{patanchon2008}
-Patanchon~G.~P., et~al., 2008, ApJ, 681, 708
+Patanchon~G.~P., et~al., 2008, ApJ, 681, 708,
+\htmladdnormallink{doi:10.1086/588543}{http://dx.doi.org/10.1086/588543},
+\htmladdnormallink{arXiv:0711.3462}{http://arxiv.org/abs/0711.3462}
 
 \bibitem{stacey2014}
-Stacey~G., et~al., 2014, Proc.\ SPIE 9153, 915321
+Stacey~G., et~al., 2014, Proc.\ SPIE 9153, 915321,
+\htmladdnormallink{doi:10.1117/12.2057101}{http://dx.doi.org/10.1117/12.2057101}
 
 \bibitem{jenness2014}
-Jenness~T., et~al., 2014, Proc.\ SPIE, 9152, 91522
+Jenness~T., et~al., 2014, Proc.\ SPIE, 9152, 91522,
+\htmladdnormallink{doi:10.1117/12.2056516}{http://dx.doi.org/10.1117/12.2056516},
+\htmladdnormallink{arXiv:1406.1515}{http://arxiv.org/abs/1406.1515}
 
 \bibitem{marsden2014a}
-Marsden~G., et~al., 2014, ASPC, 485, 399
+Marsden~G., et~al., 2014, \emph{Astronomical Data Analysis Software
+  and Systems XXIII}, ASP Conf.\ Ser., 485, 399,
+\htmladdnormallink{arXiv:1405.0482}{http://arxiv.org/abs/1405.0482}
 
 \bibitem{marsden2014b}
-Marsden~G., et~al., 2014, arXiv:1410.8416
+Marsden~G., et~al., 2014, \emph{Astronomical Data Analysis Software
+  and Systems XXIV}, ASP Conf.\ Ser., in press,
+\htmladdnormallink{arXiv:1410.8416}{http://arxiv.org/abs/1410.8416}
 
 \bibitem{chapin2013}
-Chapin~E.~L., et~al., 2013, MNRAS, 430, 2545
+Chapin~E.~L., et~al., 2013, MNRAS, 430, 2545,
+\htmladdnormallink{doi:10.1093/mnras/stt052}{http://dx.doi.org:10.1093/mnras/stt052},
+\htmladdnormallink{arXiv:1301.3652}{http://arxiv.org/abs/1301.3652}
 
 \end{thebibliography}
 
