smurf: and fix SPIE page numbers in SSN/79

--- a/applications/smurf/docs/ssn79/ssn79.tex
+++ b/applications/smurf/docs/ssn79/ssn79.tex
@@ -419,11 +419,11 @@ Patanchon~G.~P., et~al., 2008, ApJ, 681, 708,
 \htmladdnormallink{arXiv:0711.3462}{http://arxiv.org/abs/0711.3462}
 
 \bibitem{stacey2014}
-Stacey~G., et~al., 2014, Proc.\ SPIE 9153, 915321,
+Stacey~G., et~al., 2014, Proc.\ SPIE 9153, 91530L,
 \htmladdnormallink{doi:10.1117/12.2057101}{http://dx.doi.org/10.1117/12.2057101}
 
 \bibitem{jenness2014}
-Jenness~T., et~al., 2014, Proc.\ SPIE, 9152, 91522,
+Jenness~T., et~al., 2014, Proc.\ SPIE, 9152, 91522W,
 \htmladdnormallink{doi:10.1117/12.2056516}{http://dx.doi.org/10.1117/12.2056516},
 \htmladdnormallink{arXiv:1406.1515}{http://arxiv.org/abs/1406.1515}
 
